# dbcanlight

./: .coveragerc  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  database_metadata.json  dbcanlight.py  dev_additional_packages.yml  environment.yml  hmmsearch_parser.py  pyproject.toml  requirements.txt  substrate_parser.py  utils.py
.github/workflows/: build-with-python-versions.yml  build_and_test.yml  build_diamond.yml  conda-building-check.yml  conda_build.yml  download_database_files.yml  download_external.yml  publish_release.yml  python-package-conda.yml  python-versions.yml  python_versions.yml  release.yml  version_bump.yml
example/: hmmsearch_output
src/dbcanlight/: __init__.py  __main__.py  _args_parser.py  _config.py  _header.py  _libbuild.py  _utils.py  config.py  dbcanlight.py  hmmsearch_parser.py  libdiamond.py  libhmm.py  libsearch.py  pipeline.py  substrate_parser.py  utils.py
tests/: conftest.py  dbcanlight_test.py  example.faa  hmmsearch_parser_test.py  libdiamond_test.py  libhmm_test.py  libsearch_test.py  main_test.py  pipeline_test.py  substrate_parser_test.py  utils_test.py
tests/data/: bedpe.tsv  cazymes.tsv  diamond.tsv  example.faa  hmmsearch_output  overview.tsv  substrates.tsv
tests/data/mock_databases/: cazydb.fa  cazyme.hmm  substrate.hmm
tests/databases/: cazydb.dmnd  cazydb.fa  cazyme.hmm  substrate.hmm  substrate_mapping.tsv
