[build-system]
requires = [
  "setuptools>=61.0",
  "pytest>=6.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "dbcanLight"
version = "1.0.0"
authors = [
  { name="Cheng-Hung Tsai", email="chenghung.tsai@email.ucr.edu" },
]
license = {file = "LICENSE"}
description = "A lightweight rewrite of run_dbcan"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.scripts]
dbcanLight = "dbcanlight.dbcanlight:main"
dbcanLight-hmmparser = "dbcanlight.hmmsearch_parser:main"
dbcanLight-subparser = "dbcanlight.substrate_parser:main"

[project.urls]
"Homepage" = "https://github.com/chtsai0105/dbcanLight"
"Bug Tracker" = "https://github.com/chtsai0105/dbcanLight/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
  "tests",
]
