[build-system]
requires = ["setuptools>=61.0", "pytest>=6.0", "versioningit"]
build-backend = "setuptools.build_meta"

[project]
name = "dbcanlight"
authors = [{ name = "Cheng-Hung Tsai", email = "chenghung.tsai@email.ucr.edu" }]
maintainers = [{ name = "Cheng-Hung Tsai", email = "chenghung.tsai@email.ucr.edu" }]
license = { file = "LICENSE" }
description = "A lightweight version of run_dbcan for CAZyme annotation."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dynamic = ["dependencies", "version"]

[project.scripts]
dbcanlight = "dbcanlight.__main__:main"
dbcanlight-hmmparser = "dbcanlight.hmmsearch_parser:main"
dbcanlight-subparser = "dbcanlight.substrate_parser:main"

[project.urls]
"Homepage" = "https://github.com/chtsai0105/dbcanlight"
"Bug Tracker" = "https://github.com/chtsai0105/dbcanlight/issues"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.0"
