[build-system]
requires = ["setuptools>=61.0", "pytest>=6.0", "versioningit"]
build-backend = "setuptools.build_meta"

[project]
name = "dbcanlight"
authors = [{ name = "Cheng-Hung Tsai", email = "chenghung.tsai@email.ucr.edu" }]
maintainers = [{ name = "Cheng-Hung Tsai", email = "chenghung.tsai@email.ucr.edu" }]
license = { file = "LICENSE" }
description = "A lightweight version of run_dbcan for CAZyme annotation."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dynamic = ["dependencies", "version"]

[project.scripts]
dbcanlight = "dbcanlight.__main__:main"
dbcanlight-hmmparser = "dbcanlight.hmmsearch_parser:main"
dbcanlight-subparser = "dbcanlight.substrate_parser:main"

[project.urls]
"Homepage" = "https://github.com/chtsai0105/dbcanlight"
"Bug Tracker" = "https://github.com/chtsai0105/dbcanlight/issues"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.pytest_env]
DBCANLIGHT_DB = { value = "{PWD}/tests/databases", transform = true }

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -vv"
testpaths = ["tests"]

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.0"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E203", "E402", "E701"]
